# advanced-cpp

./: .gitignore  .gitmodules  BACKLOG.md  CMakeLists.txt  CMakePresets.json  LIBRARIES.md  Platforms.cmake  README.md  open-dotnet-folder.sh  pi-check.sh  post-build.sh  pre-build.sh
CSharpTestProject/: CSharpTestProject.sln
CSharpTestProject/MemoryMappedFileExample/: Program.cs
CSharpTestProject/MutexExample/: Program.cs
CSharpTestProject/SocketsExample/: Program.cs
CSharpTestProject/SocketsExample/Properties/: launchSettings.json
cmake/: Platforms.cmake  Resources.cmake
csharp/: Example.cs  ExampleSolution.sln
csharp/CSCompiler/: CSCompiler.csproj  Program.cs
csharp/MainCSProj/: Program.cs
csharp/NETAppHostTester/: NETAppHostTester.csproj  Program.cs
docs/: Dotnet Installation.md  Workflow Notes.md
libraries/glad/: CMakeLists.txt
libraries/glad/GL/: CMakeLists.txt
libraries/glad/GLES/: CMakeLists.txt
libraries/glad/include/glad/: egl.h  gl.h  gles2.h
libraries/glad/src/: egl.c  gl.c  gles2.c
libraries/nethosting/: source.md  version.md
libraries/nethosting/macos/arm64/: libnethost.dylib
libraries/nethosting/macos/intel64/: libnethost.dylib
libraries/simdjson/: CMakeLists.txt
resources/: Color Shader.glsl  Example.json  Flat Color.glsl  Unlit Texture.glsl
small-examples/: README.md  SmallExamples.cmake
small-examples/aws-s3-example/: CMakeLists.txt
small-examples/aws-s3-example/src/: main.cpp
small-examples/cpp-multithreading/: CMakeLists.txt
small-examples/cpp-multithreading/src/: main.cpp
small-examples/ctest/: CMakeLists.txt  README.md  build.sh  run-tests.sh
small-examples/ctest/src/: Skill.cpp  Skill.h  main.cpp
small-examples/ctest/tests/: SkillTests.cpp  Temp.cpp
small-examples/dotnet-hosting/: CMakeLists.txt  basicnethosting.h  copy-csharp-files.sh  main.cpp
small-examples/dynamic-libraries/: CMakeLists.txt  Platforms.cmake  main.cpp
small-examples/ecs/: CMakeLists.txt  main.cpp
small-examples/executable-size/: .gitignore  CMakeLists.txt
small-examples/game-coroutines/: CMakeLists.txt
small-examples/game-coroutines-cpp20/: CMakeLists.txt
small-examples/game-coroutines-cpp20/src/: main.cpp
small-examples/game-coroutines/src/: Coroutine.h  CoroutineSystem.h  main.cpp
small-examples/guids/: CMakeLists.txt  Platforms.cmake
small-examples/guids/tests/: GUIDtests.cpp
small-examples/json/: CMakeLists.txt  main.cpp
small-examples/json2/: CMakeLists.txt  main.cpp
small-examples/lua-c-api/: CMakeLists.txt  README.md  example.lua
small-examples/lua-c-api/lua/: Example 4 - Functions.lua  Example 5 - Function Params.lua  Example 6 - Native Functions.lua  Example 7 - Native Types.lua  Example 8 - Tables.lua
small-examples/lua-c-api/src/: main.c  main.cpp
small-examples/opengl/: CMakeLists.txt  main.cpp
small-examples/patterns/: README.md
small-examples/patterns/service-locator/: CMakeLists.txt  ServiceLocator.cpp  ServiceLocator.h  main.cpp
small-examples/patterns/singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h  SmartSingleton.cpp  SmartSingleton.h  main.cpp
small-examples/string-conversions/: CMakeLists.txt  main.cpp
small-examples/utf-8/: CMakeLists.txt  main.cpp
small-examples/win32-file-system-watcher/: CMakeLists.txt
small-examples/win32-file-system-watcher/src/: main.cpp
small-examples/win32-sockets/: CMakeLists.txt
small-examples/win32-sockets/src/: main.cpp
small-examples/win32-xaudio2/: CMakeLists.txt
small-examples/win32-xaudio2/src/: main.cpp
small-examples/x11-windowing/: CMakeLists.txt  build.sh  config.sh  main.cpp  run.sh
small-examples/x11-windowing/libraries/glad/include/glad/: gl-x11-example.h  glx.h
small-examples/x11-windowing/libraries/glad/src/: gl.c
src/: GameObject.cpp  GameObject.h  GraphicsAPI.h  ServiceLocator.cpp  ServiceLocator.h  Transform.cpp  Transform.h  Window.cpp  Window.h  basicnethosting.cpp  basicnethosting.h  glcontext.cpp  glescontext.cpp  glmutility.h  guitester.cpp  guitester.h  main.cpp  openglshadertester.cpp  openglshadertester.h  opengltester.cpp  opengltester.h  openglutility.cpp  openglutility.h  platforms.h
src/components/: Component.h  MeshRenderer.cpp  MeshRenderer.h  Transform.h
src/interfaces/: IGameLoopSystem.h  IInputSystem.h  ISystem.h  IWindowSystem.h  Key.h
src/rendering/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/systems/: AppSystem.h  CSharpTestSystem.cpp  CSharpTestSystem.h  CameraSystem.cpp  CameraSystem.h  ExampleRenderSystem.cpp  ExampleRenderSystem.h  GUI.cpp  GUI.h  GUISystem.cpp  GUISystem.h  GameObjectTester.h  InputSystem.cpp  InputSystem.h  SceneSystem.cpp  SceneSystem.h  TimeSystem.cpp  TimeSystem.h  WindowSystem.cpp  WindowSystem.h
src/tests/: entities.cpp  entities.h  json.cpp  json.h
